my-app/templates/backend-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-backend-blue
  labels:
    app: my-app-backend
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-backend
      version: blue
  template:
    metadata:
      labels:
        app: my-app-backend
        version: blue
    spec:
      containers:
        - name: my-app-backend
          image: my-backend:latest
          imagePullPolicy: IfNotPresent
          
          ports:
            - containerPort: 5000
