my-app/templates/backend-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-backend-green
  labels:
    app: my-app-backend
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-backend
      version: green
  template:
    metadata:
      labels:
        app: my-app-backend
        version: green
    spec:
      containers:
        - name: my-app-backend
          image: my-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
