my-app/templates/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: my-app-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  my-app-backend
                port:
                  number: 5000
